tests/golden/compile-fail/parse_bad_pattern.rua
fn classify(value: i64) -> i64 {
    match value {
        => 0,
    }
}
