tests/golden/compile-fail/parse_bad_pattern.diag.golden
<golden>/compile-fail/parse_bad_pattern.rua:3: parse error: expected pattern, found `=>`